# opendatablend-py

./: .gitignore  LICENSE  LICENSE.md  README.md  setup.cfg
examples/: nhs_england_prescriptions_analysis_pandas.ipynb  open_data_blend_get_data_example_01.ipynb  open_data_blend_koalas_example.ipynb  open_data_blend_pandas_example.ipynb
opendatablend/: opendatablend.py
src/opendatablend/: __init__.py  opendatablend.py
src/opendatablend/tests/: test_001.py  test_002.py  test_003.py  test_004.py  test_005.py  test_006.py  test_007.py  test_008.py  test_009.py
