[metadata]
name = opendatablend
version = 0.3.1
author = Open Data Blend
author_email = info@opendatablend.io
description = A lightweight Extract-Load (EL) tool for use with the Open Data Blend Dataset API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opendatablend/opendatablend-py
project_urls =
    Bug Tracker = https://github.com/opendatablend/opendatablend-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    frictionless
    requests

[options.packages.find]
where = src