[metadata]
name = opendatablend
version = 1.2.0
author = Open Data Blend
author_email = info@opendatablend.io
description = The fastest way to get data from the Open Data Blend Dataset API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opendatablend/opendatablend-py
project_urls =
    Bug Tracker = https://github.com/opendatablend/opendatablend-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    azure-storage-blob>=12.10.0
    boto3
    botocore
    google-cloud-storage>=2.3.0
    frictionless>=4.0.0
    requests

[options.packages.find]
where = src